--- a/css/style.css
+++ b/css/style.css
@@ -22,24 +22,27 @@ body{
     font-family: "Rubik",sans-serif;
 }
 main{
-    padding: 3rem 1.5rem;
+    padding: 3rem 1.5rem; 
+    display: flex;
+    justify-content: center;
 }
-img{
+img[alt="profile-pic"]{
     width: 3.5rem;
     border: 3px solid white;
     border-radius: 3rem;
 }
-section{
+#profile{
     background-color: var(--Navy900);
     border-radius: 1rem;
+    margin: 2rem 0;
 }
 article{
     background-color: var(--Purple600);
     display: flex;
     align-items: center;
     justify-content: center;
-    column-gap: 0.5em;
-    padding: 1.5rem 1rem;
+    column-gap: 15px;
+    padding: 30px 20px;
     border-radius: 0.5rem;
     color: white;
 }
@@ -59,5 +62,111 @@ ul{
     color: var(--Purple500);
 }
 li:hover{
-    color: var(--Purple500);
+    color: white;
+}
+.work{
+    background-image: url("../images/icon-work.svg");
+    background-color: var(--Orange300);
+}
+.card-img{
+    background-repeat: no-repeat;
+    background-size: 4rem;
+    background-position: right 1rem top -9px;
+    border-radius: 1rem;
+}
+.time{
+    background-color: var(--Navy900);
+    padding: 1.5rem;
+    border-radius: 1rem;
+    position: relative;
+    top: 30px;
+    margin-bottom: 50px;
+}
+.activity,.timings{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 100;
+    margin-bottom: 0.5rem;
+}
+.activity p:first-of-type{
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+}
+.timings p:first-of-type{
+    color: white;
+    font-size: 2rem;
+    font-weight: 100;
+}
+.play{
+    background-image: url("../images/icon-play.svg");
+    background-color: var(--Blue300);
+}
+.study{
+    background-image: url("../images/icon-study.svg");
+    background-color: var(--Pink400);
+}
+.exercise{
+    background-image: url("../images/icon-exercise.svg");
+    background-color: var(--Green400);
+    background-position: right 1rem top;
+}
+.social{
+    background-image: url("../images/icon-social.svg");
+    background-color: var(--Purple700);
+}
+.selfcare{
+    background-image: url("../images/icon-self-care.svg");
+    background-color: var(--Yellow300);
+    background-size: 3.5rem;
+}
+
+@media screen and (min-width:800px){
+    main{
+        padding: 0;
+        min-height: 100vh;
+        align-items: center;
+    }
+    .container{
+        display: grid;
+        grid-template-columns: repeat(4,220px);
+        grid-template-rows: repeat(2,200px);
+        gap: 20px;
+        box-sizing: border-box;
+    }
+    #profile{
+        grid-row-start: span 2;
+        margin: 0;
+    }
+    article{
+        padding-bottom: 4.5em;
+        flex-direction: column;
+    }
+    h2{
+        font-size: 2rem;
+    }
+    .card,.card-img{
+        max-height: 100px;
+    }
+    .time{
+        margin: 0px;
+    }
+    .activity{
+        margin-bottom: 2.1rem;
+    }
+    .timings{
+        max-width: 100%;
+        display: inline-block;
+    }
+    img[alt="profile-pic"]{
+        margin-right: auto;
+        margin-bottom: 10px;
+        width: 4em;
+    }
+    ul{
+        padding: 1.5rem;
+        flex-direction: column;
+        row-gap: 0.7rem;
+    }
 }
